# opslog

./: .env.example  .gitignore  Makefile  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  entrypoint.sh  pyproject.toml
api/app/: __init__.py  auth.py  config.py  db.py  enums.py  main.py  middleware.py  models.py  oidc.py  pagination.py
api/app/routes/: __init__.py  events.py  issues.py  servers.py  utility.py
api/migrations/: 001_initial_schema.sql  002_triggers.sql  003_indexes.sql  004_roles.sql  005_seed.sql  006_token_hash_nullable.sql
api/scripts/: generate_tokens.py  migrate.py  seed.py
api/tests/: conftest.py  test_auth.py  test_e2e_workflows.py  test_events.py  test_health.py  test_idempotency.py  test_issues.py  test_me.py  test_oidc.py  test_oidc_auth.py  test_pagination.py  test_servers.py  test_startup_config.py
dashboard/: Caddyfile  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
dashboard/e2e/: dashboard.spec.ts  helpers.ts
dashboard/src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
dashboard/tests/: ApiClient.test.ts  App.test.tsx  Auth.test.tsx  AuthContext.test.tsx  AuthRouting.test.tsx  Components.test.tsx  EventStream.test.tsx  FleetComponents.test.tsx  (+4 more)
deploy/: Caddyfile  auto-deploy.sh  opslog-deploy.service  opslog-deploy.timer  opslog.service
docs/: agent-guide.md  dashboard-guide.md  implementation.md  runbook.md  spec.md
tests/: agent_dryrun.sh  smoke_test.sh
(+29 files in other folders)
